// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render HitsStats correctly when no hits 1`] = `
<div
  className="sk-hits-stats"
  data-qa="hits-stats"
>
  <div
    className="sk-hits-stats__info"
    data-qa="info"
  >
    Sorry, no hits
  </div>
</div>
`;

exports[`should render HitsStats correctly when no initial search 1`] = `
<div
  className="sk-hits-stats"
  data-qa="hits-stats"
>
  <div
    className="sk-hits-stats__info"
    data-qa="info"
  >
    Search among 100 datasets, 0 APIs, 100 concepts and 0 information models
  </div>
</div>
`;

exports[`should render HitsStats correctly when search performed  1`] = `
<div
  className="sk-hits-stats"
  data-qa="hits-stats"
>
  <div
    className="sk-hits-stats__info"
    data-qa="info"
  >
    Search gave 100 hit(s) among datasets, 0 hit(s) among APIs, 100 hit(s) among concepts 0 hit(s) among information models
  </div>
</div>
`;
